# webex-assistant-sdk

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG.md  NOTICE  README.md  lintme  pylintrc  pyproject.toml  setup.py  test_api.http  tox.ini
.github/workflows/: pythonpackage.yml
docs/: Webex Assistant SDK.md
get_started_documentation/: README.md  openapi.json
get_started_documentation/echo-skill/: pyproject.toml
get_started_documentation/echo-skill-secure/: pyproject.toml
get_started_documentation/echo-skill-secure/echo_skill_secure/: main.py
get_started_documentation/echo-skill-secure/echo_skill_secure_tester/: main.py
get_started_documentation/echo-skill-secure/secret_generator/: main.py
get_started_documentation/echo-skill/echo_skill/: main.py
tests/: conftest.py  test_agent_server.py  test_crypto.py  test_dialogue.py  test_directives.py  test_responder.py  test_skill_server.py
tests/agent/: __init__.py
tests/keys/: id_rsa.encrypted  id_rsa.encrypted.pub  id_rsa.pub
tests/skill/: README.md  __init__.py  __main__.py  id_rsa  id_rsa.pem  id_rsa.pub
webex_assistant_sdk/: __init__.py  __main__.py  _version.py  app.py  cli.py  config.py  crypto.py  dialogue.py  exceptions.py  helpers.py  server.py  types.py
webex_assistant_sdk/api/: __init__.py  api.py  base.py  mindmeld.py  simple.py
webex_assistant_sdk/api/middlewares/: decryption.py  signing.py
webex_assistant_sdk/cli/: __init__.py  config.py  crypto.py  helpers.py  nlp.py  project.py  remote.py  skill.py
webex_assistant_sdk/components/: __init__.py  dialogue.py
webex_assistant_sdk/crypto/: __init__.py  messages.py  signatures.py
webex_assistant_sdk/dialogue/: __init__.py  manager.py  responder.py  responses.py  rules.py
webex_assistant_sdk/mindmeld/: app.py  server.py
webex_assistant_sdk/models/: __init__.py  http.py  mindmeld.py
webex_assistant_sdk/static/: default_app.py  env.tmpl  mm_app.py  pyproject.toml.tmpl
webex_assistant_sdk/templates/: template.py-tpl
webex_assistant_sdk/templates/mindmeld_template/: cookiecutter.json
webex_assistant_sdk/templates/mindmeld_template/{{cookiecutter.skill_name}}/: docker-compose.yml  requirements.txt  root.py
webex_assistant_skills_sdk/: __init__.py  container.py  supress_warnings.py  types.py
webex_assistant_skills_sdk/api/: __init__.py  api.py  container.py  mindmeld.py  types.py
webex_assistant_skills_sdk/api/directives/: __init__.py  asr_hint.py  assistant_event.py  clear_web_view.py  display_web_view.py  reply.py  sleep.py  speak.py  ui_hint.py
webex_assistant_skills_sdk/api/middlewares/: __init__.py  base.py  decryption.py  signing.py
webex_assistant_skills_sdk/api/mindmeld/: __init__.py  api.py  container.py
webex_assistant_skills_sdk/api/mindmeld/dialogue/: manager.py  rules.py
webex_assistant_skills_sdk/api/mindmeld/models/: __init__.py  dialogue_rule.py  processed_query.py
webex_assistant_skills_sdk/api/mindmeld/services/: __init__.py  dialogue_manager.py
webex_assistant_skills_sdk/api/shared/dialogue/: __init__.py  manager.py  rules.py
webex_assistant_skills_sdk/api/shared/middlewares/: decryption.py
webex_assistant_skills_sdk/api/shared/models/: __init__.py  dialogue_rule.py
webex_assistant_skills_sdk/api/shared/services/: __init__.py  crypto.py  crypto_verification.py  dialogue_manager.py
webex_assistant_skills_sdk/api/simple/: __init__.py  api.py  container.py
webex_assistant_skills_sdk/api/simple/dialogue/: __init__.py  manager.py  rules.py
webex_assistant_skills_sdk/api/simple/models/: __init__.py  dialogue_rule.py  rule.py
webex_assistant_skills_sdk/api/simple/services/: __init__.py  dialogue_manager.py
webex_assistant_skills_sdk/api/test/: __init__.py  invoker.py  settings.py
webex_assistant_skills_sdk/cli/: __init__.py  __main__.py  app.py  config.py  container.py  project.py  types.py
webex_assistant_skills_sdk/cli/base_app/: __init__.py  app.py  helpers.py  init.py
webex_assistant_skills_sdk/cli/base_app/commands/: __init__.py  add.py  check.py  delete.py  edit.py  init.py  inspect.py  invoke.py  list.py  view.py
webex_assistant_skills_sdk/cli/crypto_app/: __init__.py
webex_assistant_skills_sdk/cli/models/: __init__.py
webex_assistant_skills_sdk/cli/nlp_app/: __init__.py  app.py
webex_assistant_skills_sdk/cli/services/: __init__.py  cli_config_service.py
webex_assistant_skills_sdk/cli/shared/: helpers.py
webex_assistant_skills_sdk/crypto/: __init__.py  generation.py  messages.py
webex_assistant_skills_sdk/models/: http.py  mindmeld.py
webex_assistant_skills_sdk/shared/models/: __init__.py  context.py  dialogue.py  invoke.py  params.py  skill_dialogue.py
webex_assistant_skills_sdk/shared/services/: __init__.py  base_invoker.py  crypto.py  crypto_service.py  dialogue.py  invoker.py  settings.py  test_invoker.py
webex_assistant_skills_sdk/static/: default_app.py  mm_app.py  mm_config.py
webex_skills/: __main__.py  exceptions.py  settings.py  supress_warnings.py  types.py
webex_skills/api/: __init__.py  base.py  mindmeld.py  simple.py
webex_skills/api/middlewares/: __init__.py  base.py  decryption.py  signing.py
webex_skills/cli/: __init__.py  __main__.py  app.py  base.py  config.py  config_models.py  container.py  crypto.py  helpers.py  main.py  nlp.py  project.py  remote.py  skill.py
webex_skills/cli/base/: __init__.py  add.py  app.py
webex_skills/cli/base_app/: __init__.py  app.py  helpers.py
webex_skills/cli/base_app/commands/: __init__.py  (+6 more)
webex_skills/cli/crypto/: __init__.py  app.py  generate_keys.py  generate_secret.py
webex_skills/cli/crypto_app/: __init__.py  app.py
webex_skills/cli/models/: __init__.py  cli_config.py
webex_skills/cli/nlp/: __init__.py  app.py  build.py  process.py
webex_skills/cli/nlp_app/: __init__.py
webex_skills/cli/services/: __init__.py  cli_config_service.py
webex_skills/crypto/: __init__.py  generation.py
webex_skills/dialogue/: manager.py  responses.py  rules.py
webex_skills/models/: http.py  mindmeld.py
webex_skills/static/: default_app.py  mm_app.py  pyproject.toml.tmpl
(+41 files in other folders)
