[tool.poetry]
name = "webex-skills"
version = "2.0.14"
homepage = "https://github.com/cisco/webex-assistant-sdk"
description = "An SDK for skills for the Webex Assistant."
readme = "README.md"
authors = [
    "James Snow <jasnow@cisco.com>",
    "Juan Rodriguez <juanrdz@cisco.com>",
    "Christian Mata <cmata@cisco.com>",
    "Brady Lenz <brlenz@cisco.com>"
]
license = "MIT"
keywords = ['webex', 'webex-assistant', 'webex-teams']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
]


[tool.poetry.dependencies]
python = "^3.7"
cryptography = "^35.0.0"
mindmeld = {version= "^4.4.0", optional=true}
requests = "^2.22.0"
typer = "^0.4.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = '^21.9b0'
isort = {version = '^4.3', extras = ['toml']}
pylint = '^2.3.1'
pytest = '^5.1'
pytest-cov = "^2.8.1"
tox = "^3.14.0"
autopep8 = "^1.5.7"
mock = "^4.0.3"
pytest-asyncio = "^0.15.1"
flake8 = "^4.0.1"

[tool.poetry.extras]
mindmeld = ["mindmeld"]

[tool.poetry.scripts]
webex-skills = 'webex_skills.cli:main'

[tool.autopep8]
max_line_length = 120
recursive = true

[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
line_length = 120
multi_line_output = 3
sections = ['FUTURE', 'STDLIB', 'TRANSITIONAL', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
default_section = 'THIRDPARTY'
known_first_party = ['webex_assistant_sdk']
skip_glob = ['scripts', 'venv*']


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37']

[tool.flake8]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.pylint.DESIGN]
max-args = 10
min-public-methods = 0

[tool.pylint.FORMAT]
max-line-length = 120

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
