[tool.poetry]
name = "echo-skill"
version = "0.1.0"
description = ""
authors = ["Juan Rodriguez <juanrdz@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
